2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: make the Eject button default to insensitive
	(Closes: #384736)

2006-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_set_volume), (bacon_video_widget_new):
	Have _can_set_volume behave properly, don't fail creating the
	video widget if we can't create an audio sink and we're not in audio
	mode (Closes: #170719)

============ Version 2.16.4

2006-11-28  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.4

2006-11-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c: (totem_sidebar_setup):
	* src/totem.c: (totem_action_save_state),
	(main_pane_size_allocated), (totem_setup_window),
	(video_widget_create): Patch from Jan Arne Petersen
	<jpetersen@jpetersen.org> to make Totem remember the width
	of the sidebar even when Totem was maximised when we exited
	(Closes: #365211, #361800, #316286)

2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore): Patch from
	Marek Schmidt <xschmi01@stud.fit.vutbr.cz> to fix restoring the
	session. The playlist expects URI, we fed it a local filename
	(Closes: Debian #399983)

============ Version 2.16.3

2006-11-14  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.3

2006-11-09  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Patch from Lubomir Marinov to make the "Zoom
	1:2", etc. menu items work again by not setting the width and height
	request on the video widget (Closes: #351798)

2006-10-30  Bastien Nocera  <hadess@hadess.net>

	* COPYING: fix typo spotted by Alexander Bostrom (Closes: #366278)

2006-10-29  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(my_gnome_vfs_get_mime_type_with_data): initialise bytes_read
	to avoid problems with gnome-vfs not initialising it
	(See bug #366331)

2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>
